--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -323,6 +323,113 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2YAXPA3jnYqy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#include <stdio.h> #include <string.h>\n",
+        "\n",
+        "char prol[7][10] = { \"S\", \"A\", \"A\", \"B\", \"B\", \"C\", \"C\" };\n",
+        "char pror[7][10] = { \"A\", \"Bb\", \"Cd\", \"aB\", \"@\", \"Cc\", \"@\" };\n",
+        "\n",
+        "char prod[7][10] = { \"S->A\", \"A->Bb\", \"A->Cd\", \"B->aB\", \"B->@\", \"C->Cc\", \"C->@\" };\n",
+        "char first[7][10] = { \"abcd\", \"ab\", \"cd\", \"a@\", \"@\", \"c@\", \"@\" };\n",
+        "char follow[7][10] = { \"$\", \"$\", \"$\", \"a$\", \"b$\", \"c$\", \"d$\" }; char table[5][6][10];\n",
+        "\n",
+        "int numr(char c)\n",
+        "{\n",
+        "switch (c)\n",
+        "{\n",
+        "case 'S': return 0;\n",
+        "\n",
+        "case 'A': return 1;\n",
+        "\n",
+        "case 'B': return 2;\n",
+        "\n",
+        "case 'C': return 3;\n",
+        "case 'a': return 0;\n",
+        "case 'b': return 1;\n",
+        "\n",
+        "case 'c': return 2;\n",
+        "\n",
+        "case 'd': return 3;\n",
+        "\n",
+        "case '$': return 4;\n",
+        "}\n",
+        "return (2);\n",
+        "}\n",
+        "int main()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "{\n",
+        "int i, j, k;\n",
+        "\n",
+        "for (i = 0; i < 5; i++) for (j = 0; j < 6; j++)\n",
+        "strcpy(table[i][j], \" \");\n",
+        "printf(\"The following grammar is used for Parsing Table:\\n\"); for (i = 0; i < 7; i++)\n",
+        "printf(\"%s\\n\", prod[i]); printf(\"\\nPredictive parsing table:\\n\"); fflush(stdin);\n",
+        "for (i = 0; i < 7; i++)\n",
+        "{\n",
+        "k = strlen(first[i]);\n",
+        "for (j = 0; j < 10; j++) if (first[i][j] != '@')\n",
+        "strcpy(table[numr(prol[i][0]) + 1][numr(first[i][j]) + 1], prod[i]);\n",
+        "}\n",
+        "\n",
+        "for (i = 0; i < 7; i++)\n",
+        "{\n",
+        "if (strlen(pror[i]) == 1)\n",
+        "{\n",
+        "if (pror[i][0] == '@')\n",
+        "{\n",
+        "k = strlen(follow[i]); for (j = 0; j < k; j++)\n",
+        "strcpy(table[numr(prol[i][0]) + 1][numr(follow[i][j]) + 1], prod[i]);\n",
+        "}\n",
+        "}\n",
+        "}\n",
+        "\n",
+        "strcpy(table[0][0], \" \");\n",
+        "\n",
+        "strcpy(table[0][1], \"a\");\n",
+        "\n",
+        "strcpy(table[0][2], \"b\");\n",
+        "\n",
+        "strcpy(table[0][3], \"c\");\n",
+        "\n",
+        "strcpy(table[0][4], \"d\");\n",
+        "strcpy(table[0][5], \"$\");\n",
+        "strcpy(table[1][0], \"S\");\n",
+        "strcpy(table[2][0], \"A\");\n",
+        "\n",
+        "strcpy(table[3][0], \"B\");\n",
+        "\n",
+        "strcpy(table[4][0], \"C\");\n",
+        "\n",
+        "printf(\"\\n\t\\n\");\n",
+        "\n",
+        "for (i = 0; i < 5; i++) for (j = 0; j < 6; j++)\n",
+        "{\n",
+        "printf(\"%-10s\", table[i][j]); if (j == 5)\n",
+        "printf(\"\\n\t\\n\");\n",
+        "}\n",
+        "}\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "jk6pSeL-npZj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "VYV91hbKwP2J"
@@ -524,12 +631,12 @@
         "}\n"
       ],
       "metadata": {
-        "id": "VvOvGXZ5ilKB",
-        "outputId": "57594771-0799-458d-80f0-861e8434aea9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "id": "VvOvGXZ5ilKB",
+        "outputId": "57594771-0799-458d-80f0-861e8434aea9"
       },
       "execution_count": 1,
       "outputs": [
